--- a/DrillingDetector/DrillingDetector.csproj
+++ b/DrillingDetector/DrillingDetector.csproj
@@ -69,18 +69,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Vibration_Monitor.cs" />
-    <Compile Include="CUTeffi_opt.cs" />
-    <Compile Include="maincode.cs">
+    <Compile Include="SplashScreen.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="maincode.Designer.cs">
-      <DependentUpon>maincode.cs</DependentUpon>
+    <Compile Include="SplashScreen.designer.cs">
+      <DependentUpon>SplashScreen.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Vibration_Monitor.cs" />
+    <Compile Include="CUTeffi_opt.cs" />
+    <Compile Include="CUTeffi_DrillingModule.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CUTeffi_DrillingModule.Designer.cs">
+      <DependentUpon>CUTeffi_DrillingModule.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="maincode.resx">
-      <DependentUpon>maincode.cs</DependentUpon>
+    <EmbeddedResource Include="CUTeffi_DrillingModule.resx">
+      <DependentUpon>CUTeffi_DrillingModule.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -92,6 +98,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="SplashScreen.resx">
+      <DependentUpon>SplashScreen.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
